--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^8.2.14",
-    "@angular/cdk": "^7.1.0",
+    "@angular/cdk": "^8.2.3",
     "@angular/common": "^8.2.14",
     "@angular/compiler": "^8.2.14",
     "@angular/core": "^8.2.14",
-    "@angular/flex-layout": "^7.0.0-beta.19",
+    "@angular/flex-layout": "^8.0.0-beta.27",
     "@angular/forms": "^8.2.14",
-    "@angular/material": "^7.1.0",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "^8.2.14",
     "@angular/platform-browser-dynamic": "^8.2.14",
     "@angular/router": "^8.2.14",
@@ -34,11 +34,12 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "0.803.29",
     "@angular/cli": "~8.3.29",
     "@angular/compiler-cli": "~8.2.14",
     "@angular/language-service": "~8.2.14",
     "@types/node": "~8.9.4",
-    "@types/jasmine": "~2.8.8",
+    "@types/jasmine": "~3.7.4",
     "@types/jasminewd2": "~2.0.3",
     "codelyzer": "^5.0.1",
     "jasmine-core": "~2.99.1",
@@ -48,12 +49,12 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "ng-packagr": "^5.4.0",
-    "protractor": "~5.4.0",
+    "ng-packagr": "^9.0.0",
+    "protractor": "~7.0.0",
     "ts-node": "~7.0.0",
     "tsickle": "^0.37.0",
     "tslib": "^1.9.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.5.3"
+    "typescript": "3.5.3"
   }
 }
