update to angular 8 is done

--- a/package.json
+++ b/package.json
@@ -35,12 +35,13 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.803.29",
+    "@angular-devkit/build-ng-packagr": "^0.803.29",
     "@angular/cli": "~8.3.29",
     "@angular/compiler-cli": "~8.2.14",
     "@angular/language-service": "~8.2.14",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~3.7.4",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "^5.0.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
