--- a/angular.json
+++ b/angular.json
@@ -150,13 +150,13 @@
           "options": {
             "tsConfig": "projects/material-time-picker/tsconfig.lib.json",
             "project": "projects/material-time-picker/ng-package.json"
-          }
-        ,          "configurations": {
+          },
+          "configurations": {
             "production": {
               "tsConfig": "projects/material-time-picker/tsconfig.lib.prod.json"
             }
           }
-},
+        },
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
@@ -180,5 +180,8 @@
       }
     }
   },
-  "defaultProject": "demo"
+  "defaultProject": "demo",
+  "cli": {
+    "analytics": "8793fad4-bb97-469a-9c18-88196c4d8b87"
+  }
 }
