--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
-    "lib:build": "ng build material-time-picker --prod",
+    "lib:build": "ng build material-time-picker",
+    "lib:build:prod": "ng build material-time-picker --configuration production",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "lib:publish": "cd dist/material-time-picker && npm publish",
@@ -19,17 +20,17 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^12.0.1",
-    "@angular/cdk": "^11.2.13",
+    "@angular/cdk": "^12.0.1",
     "@angular/common": "^12.0.1",
     "@angular/compiler": "^12.0.1",
     "@angular/core": "^12.0.1",
-    "@angular/flex-layout": "^11.0.0-beta.33",
+    "@angular/flex-layout": "^12.0.0-beta.34",
     "@angular/forms": "^12.0.1",
-    "@angular/material": "^11.2.13",
+    "@angular/material": "^12.0.1",
     "@angular/platform-browser": "^12.0.1",
     "@angular/platform-browser-dynamic": "^12.0.1",
     "@angular/router": "^12.0.1",
-    "core-js": "^2.5.4",
+    "core-js": "^3.12.1",
     "rxjs": "~6.6.7",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
@@ -42,7 +43,7 @@
     "@angular/language-service": "~12.0.1",
     "@types/jasmine": "~3.7.4",
     "@types/jasminewd2": "~2.0.9",
-    "@types/node": "^12.11.1",
+    "@types/node": "^15.6.1",
     "codelyzer": "^6.0.2",
     "jasmine-core": "~3.7.1",
     "jasmine-spec-reporter": "~7.0.0",
