--- a/package.json
+++ b/package.json
@@ -57,5 +57,8 @@
     "ts-node": "~10.0.0",
     "tslint": "~6.1.0",
     "typescript": "4.2.4"
+  },
+  "bugs": {
+    "url" : "https://github.com/candidosales/material-time-picker/issues",
   }
 }
