--- a/package.json
+++ b/package.json
@@ -59,6 +59,5 @@
     "typescript": "4.2.4"
   },
   "bugs": {
-    "url" : "https://github.com/candidosales/material-time-picker/issues",
-  }
+    "url" : "https://github.com/candidosales/material-time-picker/issues"}
 }
