--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "material-time-picker",
-  "version": "2.4.0",
+  "version": "2.5.0",
   "author": {
     "email": "candidosg@gmail.com",
     "name": "Cândido Sales Gomes"
@@ -19,28 +19,28 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^12.0.1",
+    "@angular/animations": "^13.3.11",
     "@angular/cdk": "^12.0.1",
-    "@angular/common": "^12.0.1",
-    "@angular/compiler": "^12.0.1",
-    "@angular/core": "^12.0.1",
+    "@angular/common": "^13.3.11",
+    "@angular/compiler": "^13.3.11",
+    "@angular/core": "^13.3.11",
     "@angular/flex-layout": "^12.0.0-beta.34",
-    "@angular/forms": "^12.0.1",
+    "@angular/forms": "^13.3.11",
     "@angular/material": "^12.0.1",
-    "@angular/platform-browser": "^12.0.1",
-    "@angular/platform-browser-dynamic": "^12.0.1",
-    "@angular/router": "^12.0.1",
+    "@angular/platform-browser": "^13.3.11",
+    "@angular/platform-browser-dynamic": "^13.3.11",
+    "@angular/router": "^13.3.11",
     "core-js": "^3.12.1",
-    "rxjs": "~7.1.0",
-    "tslib": "^2.2.0",
+    "rxjs": "~7.5.7",
+    "tslib": "^2.4.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.0.1",
-    "@angular-devkit/core": "^12.0.1",
-    "@angular/cli": "~12.0.1",
-    "@angular/compiler-cli": "~12.0.1",
-    "@angular/language-service": "~12.0.1",
+    "@angular-devkit/build-angular": "~13.3.9",
+    "@angular-devkit/core": "^13.3.9",
+    "@angular/cli": "~13.3.9",
+    "@angular/compiler-cli": "~13.3.11",
+    "@angular/language-service": "~13.3.11",
     "@types/jasmine": "~3.7.4",
     "@types/jasminewd2": "~2.0.9",
     "@types/node": "^15.6.1",
@@ -52,12 +52,13 @@
     "karma-coverage-istanbul-reporter": "~3.0.3",
     "karma-jasmine": "~4.0.1",
     "karma-jasmine-html-reporter": "^1.6.0",
-    "ng-packagr": "^12.0.0",
+    "ng-packagr": "^13.3.1",
     "protractor": "~7.0.0",
     "ts-node": "~10.0.0",
     "tslint": "~6.1.0",
-    "typescript": "4.2.4"
+    "typescript": "4.6.4"
   },
   "bugs": {
-    "url" : "https://github.com/candidosales/material-time-picker/issues"}
+    "url": "https://github.com/candidosales/material-time-picker/issues"
+  }
 }
