--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "module": "es2020",
     "moduleResolution": "node",
     "experimentalDecorators": true,
-    "target": "es2020",
+    "target": "ES2022",
     "typeRoots": [
       "node_modules/@types"
     ],
@@ -25,6 +25,7 @@
       "material-time-picker/*": [
         "dist/material-time-picker/*"
       ]
-    }
+    },
+    "useDefineForClassFields": false
   }
 }
