--- a/projects/material-time-picker/package.json
+++ b/projects/material-time-picker/package.json
@@ -25,7 +25,7 @@
     "@angular/platform-browser-dynamic": "^15.0.00"
   },
   "engines": {
-    "node": ">=14.0.0 <17.0.0",
+    "node": ">=14.0.0",
     "yarn": "^1.22.17",
     "npm": "Please use Yarn instead of NPM to install dependencies. See: https://yarnpkg.com/lang/en/docs/install/"
   },
