--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "material-time-picker",
-  "version": "2.7.0",
+  "name": "@passtech/material-time-picker",
+  "version": "2.7.3",
   "author": {
     "email": "candidosg@gmail.com",
     "name": "Cândido Sales Gomes"
@@ -24,9 +24,9 @@
     "@angular/common": "^15.0.0",
     "@angular/compiler": "^15.0.0",
     "@angular/core": "^15.0.0",
-    "@angular/flex-layout": "^14.0.0-beta.41",
     "@angular/forms": "^15.0.0",
     "@angular/material": "^15.0.0",
+    "@angular/material/cdk": "^15.0.0",
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
