fix package name

--- a/projects/material-time-picker/package.json
+++ b/projects/material-time-picker/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "material-time-picker",
+  "name": "@candidosales/material-time-picker",
   "version": "2.8.0",
   "description": "Time Picker for Angular",
   "author": {
