--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "material-time-picker",
+  "name": "@candidosales/material-time-picker",
   "version": "2.8.0",
   "author": {
     "email": "candidosg@gmail.com",
